@@ -1,4 +1,9 @@
 
+2017-07-17  Edward Hart <edward.dan.hart@gmail.com>
+
+	* typeck.c (cb_expr_shift): corrected r1347 - only set expr_lh to NULL
+	  if the token in parentheses is a relational expression (see bug #321).
+
 2017-07-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* config.c: better handling of empty/comment only lines
